fix: Android-Build und Lint verifizieren
- Android SDK 35 und Build Tools 35 fuer den vollstaendigen Build verwenden
- JUnit Platform Launcher passend zur Jupiter-Version ausrichten
- Testcode mit dem Android-Compilepfad kompatibel machen
- Ressourcenplatzhalter und RTL-Layoutattribute korrigieren
- Android Gradle Plugin auf 8.11.2 aktualisieren
- Debug- und Release-Tests, Android Lint und Debug-APK erfolgreich pruefen
- Pruefstatus und verbleibende Lint-Hinweise dokumentieren